<resources>
    <string name="app_name">MovieDemo</string>

    <string name="lblsplash">Ultimate\nDestination\nFor\nCinematic\nAdventures!</string>
    <string name="lblgetstarted">Let\'s Get Started</string>
    <string name="lblnowplaying">Now Playing</string>
    <string name="lblbooktickets">Book tickets</string>
    <string name="strDot">&#8226;</string>
    <string name="lblhowmanyseats">How many seats?</string>
    <string name="lblgoldtype">GOLD</string>
    <string name="lblseatprice">\u20B9 100.00</string>
    <string name="lblrupeesymbol">\u20B9</string>
    <string name="lblavailable">Available</string>
    <string name="lbltotalprice">Total Price</string>
    <string name="lbladdtocart">Add to cart</string>
    <string name="lblcart">Cart</string>
    <string name="lblprocessing">Processing</string>
    <string name="lbltotalprice_colon">Total Price : </string>
</resources>