<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/lblhowmanyseats"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mRvSeatSelectionList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        tools:listitem="@layout/list_seat_selection"
        tools:itemCount="10"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black_transparent_50"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblgoldtype"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:textColor="@color/grey"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblseatprice"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblavailable"
                android:textColor="@color/green"
                android:textAllCaps="true"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbltotalprice"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:textColor="@color/grey"/>
            <TextView
                android:id="@+id/mTxtTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/lblseatprice"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardBackgroundColor="@color/white"
        android:layout_marginTop="10dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/mBtnAddCart"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/orange"
            android:text="@string/lbladdtocart"
            android:textSize="16sp"/>
    </androidx.cardview.widget.CardView>



</LinearLayout>