<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ActivityCart"
    android:background="@color/white">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mToolBarView"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:contentInsetStart="0dp"
        android:background="@color/black">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/mIvBack"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_back"
                app:tint="@color/white"
                android:padding="10dp"/>
            <TextView
                android:layout_toEndOf="@+id/mIvBack"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/lblcart"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:layout_centerVertical="true"/>

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mRVCartList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mToolBarView"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/mFooterView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        android:layout_alignParentBottom="true"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbltotalprice_colon"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/mTxtTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="500.00"
                android:textSize="18sp"
                android:textColor="@color/orange"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/mBtnBookTicktes"
                android:layout_below="@+id/mTxtTotalPrice"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/orange"
                android:text="@string/lblprocessing"
                android:textSize="16sp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>